# Complete_Agentic_System_2025_2026_2027

./: .gitignore  composio_plan.md  how_to_use.md  prerequisites.md  pyproject.toml  trigger_composio.md  workflow_automation.md  workflow_composio.md
.github/workflows/: test.yml
dags/: document_ingestion_dag.py
data/: enterprise_knowledge_base.txt
scratch/: check_tools.py  debug_session_tools.py  debug_tools.py  inspect_comp_tools.py  list_gmail_tools.py  test_connection_status.py  test_explicit_tools.py  test_get_tools_direct.py
scripts/: init_databases.py  test_cli.py
src/: config.py
src/agents/: composio_agent.py  rag_agent.py  state.py
src/pipelines/: ingestion.py
src/tools/: conversation_store.py  mcp.py  search.py
src/utils/: __init__.py  entity_extractor.py  event_bus.py  graph_reponse.py  graph_response.py  graph_store.py  hybrid_search.py  keyword_search.py  parser.py  test_connection.py  uploads.py  vector_store.py
tests/: test_agents.py  test_knowledge_graph_extraction.py  test_uploads_and_history.py  test_vector_store_index.py
ui/: app.py  composio-agent.py
ui/pages/: __init__.py  relationships.py
workflows/: agent.py  app.py
