[project]
name = "ai-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "ronitrai27",email = "108011380+ronitrai27@users.noreply.github.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "openai (>=2.42.0,<3.0.0)",
    "tavily-python (>=0.7.26,<0.8.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "llama-cloud (>=2.9.0,<3.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "llama-index-core (>=0.14.22,<0.15.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.34.2,<3.0.0)",
    "apache-airflow (==3.1.0)",
    "structlog (<25.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
